# BASS-test

./: README.md
BASS/bass/docs/: bassasio.chm  basswv.chm
BASS/bass/include/: bass_fx.h
BASS/bassasio14/c/: bassasio.sln  makefile  makefile.in
BASS/bassasio14/c/contest/: contest.c  contest.vcxproj
BASS/bassasio14/c/dsdtest/: dsdtest.c  dsdtest.vcxproj  makefile
BASS/bassasio14/c/dsptest/: dsptest.c  dsptest.vcxproj
BASS/bassasio14/c/list/: list.c  list.vcxproj
BASS/bassasio14/c/livefx/: livefx.c  livefx.vcxproj
BASS/bassasio14/c/multi/: multi.c  multi.vcxproj
BASS/bassasio14/c/rectest/: makefile  rectest.c  rectest.rc  rectest.vcxproj
BASS/bassasio14/c/speakers/: speakers.c  speakers.vcxproj
BASS/bassasio14/c/synth/: synth.c  synth.vcxproj
BASS/bassasio14/delphi/: bassasio.pas
BASS/bassasio14/delphi/contest/: contest.dpr
BASS/bassasio14/delphi/dsptest/: MainForm.pas
BASS/bassasio14/delphi/list/: alMain.dfm  alMain.pas  list.dpr
BASS/bassasio14/vb/: bassasio.bas
BASS/basscd24/: basscd.chm  basscd.txt
BASS/basscd24/c/: basscd.sln  makefile.in
BASS/basscd24/c/cdtest/: cdtest.c  (+3 more)
BASS/basscd24/delphi/: basscd.pas
BASS/basscd24/vb/: basscd.bas
BASS/bassdsd24/: bassdsd.chm
BASS/bassdsd24/delphi/: bassdsd.pas
BASS/bassdsd24/vb/: bassdsd.bas
BASS/bassmix24/c/: bassmix.sln  makefile.in
BASS/bassmix24/delphi/: bassmix.pas
BASS/bassmix24/vb/: bassmix.bas
BASS/bassopus24/: bassopus.chm
BASS/basswasapi24/c/: basswasapi.sln
BASS/tags19/: tags-readme.txt
bass_test/: CMakeLists.txt  CMakePresets.json  bass_test.cpp  bass_test.h
(+35 files in other folders)
